tests/valid/valid_wildcard_multilevel.csl
config MultiWildcard {
  platforms: {
    *: {
      arch: {
        *: { lib_path: string; };
      };
    };
  };
}
