tests/invalid/invalid_unclosed_string.csl
config InvalidString {
  s: string = "unterminated;
}
